--- a/daethereum.html
+++ b/daethereum.html
@@ -89,9 +89,10 @@
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
-						<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
 						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="#">Buy With Altcoin</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
 					</ul>
 				</div>
 			</section>
@@ -136,9 +137,10 @@
   </ul>
 </div>
 <ul class="actions">
-<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
+<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
 <li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-<li><a target="_blank" href="#">Buy With Altcoin</a></li>
+<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
+<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
 </ul>
 			</section>
 
@@ -195,10 +197,18 @@
 					    <li>Triafa.com</li>
 					  </ul>
 					</div>
+					<div class="columns">
+					  <ul class="price">
+					    <li class="header">Link</li>
+					    <li>English Whitepaper</li>
+					    <li>Indonesian Whitepaper</li>
+					  </ul>
+					</div>
 					<ul class="actions">
-					<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
-					<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-					<li><a target="_blank" href="#">Buy With Altcoin</a></li>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
 					</ul>
 			</div>
 			</section>
