--- a/daethereum.html
+++ b/daethereum.html
@@ -88,11 +88,13 @@
 					Team: 10,000,000 DTHR
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
-						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
-						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
-						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
+						<center>
+						<iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+						</center>
 					</ul>
 				</div>
 			</section>
@@ -137,10 +139,12 @@
   </ul>
 </div>
 <ul class="actions">
-<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
-<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
-<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
+<center>
+<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
+<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
+<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
+<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+</center>
 </ul>
 			</section>
 
@@ -148,28 +152,22 @@
 			<section id="Roadmap" class="main style2">
 				<div class="container">
 					<div class="row 150%">
+						<center>
 						<header class="major">
 							<h2>Roadmap</h2>
 						</header>
 							<h1><b>2017</b></h1>
-							<p><b>Q1</b></p>
-							<p>Dae Platform Plans</p>
+							<p><b>Q1</b>: Dae Platform Plans</p>
 							<h1><b>2018</b></h1>
-							<p><b>Q1</b></p>
-							<p>Initial Daethereum Offering (Initial Token Sale)</p>
-							<p><b>Q2</b></p>
-							<p>Tokenization & Listed In EtherDelta, ForkDelta</p>
-							<p><b>Q3</b></p>
-							<p>Launch of Online Information Media Site</p>
-							<p><b>Q4</b></p>
-							<p>Launch of Travel Comparison Ticket Price Site</p>
-							<p><b>Q5</b></p>
-							<p>Launch of Dae Platform Markets</p>
+							<p><b>Q1</b>: Initial Daethereum Offering (Initial Token Sale)</p>
+							<p><b>Q2</b>: Tokenization & Listed In EtherDelta, ForkDelta</p>
+							<p><b>Q3</b>: Launch of Online Information Media Site</p>
+							<p><b>Q4</b>: Launch of Travel Comparison Ticket Price Site</p>
+							<p><b>Q5</b>: Launch of Dae Platform Markets</p>
 							<h1><b>2019</b></h1>
-							<p><b>Q1</b></p>
-							<p>Gathering And Discuss Dae Platform Development</p>
-							<p><b>Q2</b></p>
-							<p>Launch of New Projects Discussed.</p>
+							<p><b>Q1</b>: Gathering And Discuss Dae Platform Development</p>
+							<p><b>Q2</b>: Launch of New Projects Discussed.</p>
+						</center>
 					</div>
 				</div>
 			</section>
@@ -205,10 +203,12 @@
 					  </ul>
 					</div>
 					<ul class="actions">
-						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale">Buy With Bitcoin</a></li>
-						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="https://coingate.com/pay/daeplatform">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://www.daeplatform.net/daethereum">Payment Confirmation</a></li>
+						<center>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+						</center>
 					</ul>
 			</div>
 			</section>
