--- a/daethereum.html
+++ b/daethereum.html
@@ -88,12 +88,12 @@
 					Team: 10,000,000 DTHR
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
+						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
 						<center>
-						<iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe>
 						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
 						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
 						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
 						</center>
 					</ul>
 				</div>
@@ -143,7 +143,7 @@
 <li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
 <li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
 <li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
 </center>
 </ul>
 			</section>
@@ -151,8 +151,7 @@
 		<!-- Roadmap -->
 			<section id="Roadmap" class="main style2">
 				<div class="container">
-					<div class="row 150%">
-						<center>
+					<center>
 						<header class="major">
 							<h2>Roadmap</h2>
 						</header>
@@ -167,14 +166,12 @@
 							<h1><b>2019</b></h1>
 							<p><b>Q1</b>: Gathering And Discuss Dae Platform Development</p>
 							<p><b>Q2</b>: Launch of New Projects Discussed.</p>
-						</center>
-					</div>
+					</center>
 				</div>
 			</section>
 
 		<!-- Others -->
 			<section id="Others" class="main style1">
-			<div class="container">
 				<header class="major">
 					<center><h2><a target="_blank" href="#">Others</a></h2></center>
 				</header>
@@ -183,8 +180,10 @@
 					    <li class="header">Partners</li>
 					    <li>Ethereum Platform</li>
 					    <li>Blockchain.info</li>
-					    <li>Coin Payment</li>
+					    <li>CoinGate</li>
 					    <li>MEW</li>
+					    <li>Coinomi</li>
+					    <li>Kcash</li>
 					  </ul>
 					</div>
 					<div class="columns">
@@ -193,6 +192,9 @@
 					    <li>BitcoinTalk English</li>
 					    <li>BitcoinTalk Bahasa Indonesia</li>
 					    <li>Triafa.com</li>
+					    <li>FJB KasKus Indonesia</li>
+					    <li>Coming Soon</li>
+					    <li>Coming Soon</li>
 					  </ul>
 					</div>
 					<div class="columns">
@@ -200,6 +202,10 @@
 					    <li class="header">Link</li>
 					    <li>English Whitepaper</li>
 					    <li>Indonesian Whitepaper</li>
+					    <li>Etherscan</li>
+					    <li>Coming Soon</li>
+					    <li>Coming Soon</li>
+					    <li>Coming Soon</li>
 					  </ul>
 					</div>
 					<ul class="actions">
@@ -207,10 +213,9 @@
 						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
 						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
 						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="grey">Payment Confirmation</a></li>
+						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
 						</center>
 					</ul>
-			</div>
 			</section>
 
 		<!-- Five -->
