Daethereum (DTHR) - Initial Token Sale
Initial Daethereum Offering - Initial Token Sale

--- a/daethereum.html
+++ b/daethereum.html
@@ -90,10 +90,10 @@
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
 						<center>
-						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
-						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="button scrolly">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="button scrolly">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="button scrolly">Payment Confirmation</a></li>
 						</center>
 					</ul>
 				</div>
@@ -140,10 +140,10 @@
 </div>
 <ul class="actions">
 <center>
-<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
-<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
-<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
+<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="button scrolly">Buy With Bitcoin</a></li>
+<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="button scrolly">CoinGate Payment Gateway</a></li>
+<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="button scrolly">Payment Confirmation</a></li>
 </center>
 </ul>
 			</section>
@@ -210,10 +210,10 @@
 					</div>
 					<ul class="actions">
 						<center>
-						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="grey">Buy With Bitcoin</a></li>
-						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="grey">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="grey">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="grey">Payment Confirmation</a></li>
+						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="button scrolly">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="button scrolly">CoinGate Payment Gateway</a></li>
+						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="button scrolly">Payment Confirmation</a></li>
 						</center>
 					</ul>
 			</section>
