--- a/daethereum.html
+++ b/daethereum.html
@@ -79,13 +79,13 @@
 					<p>Token Name: Daethereum<br />
 					Token Symbol: DTHR<br />
 					Type: ERC20<br />
-					Platform: Ethereum
+					Platform: Ethereum<br />
 					Total Supply: 100,000,000<br />
 					Decimal: 8</p>
 					<p><b>Distibution</b></p>
 					<p>Initial Token Sale: 50,000,000 DTHR<br />
 					Bounty & Airdrop: 20,000,000 DTHR<br />
-					Team: 10,000,000 DTHR
+					Team: 10,000,000 DTHR<br />
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
@@ -170,8 +170,20 @@
 				</div>
 			</section>
 
+		<!-- Why Daethereum -->
+			<section id="WhyDaethereum" class="main style1">
+				<header class="major">
+					<center><h2>Why Daethereum?</a></h2></center>
+				</header>
+					<p>1. Each completed Sales Round of Daethereum (DTHR), Daethereum (DTHR) will be delivered to your ethereum address. Either the buyer or the only each Bounty & Airdrop.<br />
+					2. After completion of the Initial Token Sale, Daethereum (DTHR) may trading at EtherDelta and ForkDelta.<br />
+					3. Daethereum (DTHR) to build Dae Platform project plan: Tokenisasi, Online Media Information Site, Tour Ticket Comparison, Dae Platform Markets, New Projects Discussed.<br />
+					4. Have experienced team in their field.</p>
+			</section>
+
 		<!-- Others -->
-			<section id="Others" class="main style1">
+			<section id="Others" class="main style2">
+				<div class="container">
 				<header class="major">
 					<center><h2><a target="_blank" href="#">Others</a></h2></center>
 				</header>
@@ -216,6 +228,7 @@
 						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="button scrolly">Payment Confirmation</a></li>
 						</center>
 					</ul>
+				</div>
 			</section>
 
 		<!-- Five -->
