--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -50,11 +50,12 @@
           <p><b>Refer Bounty & Airdrop, and get 10% from which they claim.</b></p>
 				</div>
 			</section>
+
 		<!-- Form -->
 			<section id="Form" class="main style2">
 				<div class="container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBnayKL1NLmJrvWHYpKk0KV7jaKVr9C-Vv8bqyFKo80fa4yw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Memuat...</iframe>
-        </div>
+					<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBnayKL1NLmJrvWHYpKk0KV7jaKVr9C-Vv8bqyFKo80fa4yw/viewform?embedded=true" name="Form" scrolling="no" allowTransparency="true" frameborder="0" width="750" height="550">Loading. . . . .</iframe></center>
+        			</div>
 			</section>
 		<!-- Five -->
 		<!--
