--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -24,39 +24,35 @@
 				<div class="inner">
 					<img src="dthr/Daethereum.png" />
 					<h1><strong>Daethereum (DTHR) - Bounty & Airdrop</strong></h1>
-          <p><b>Social Media Campaign</b></p>
+					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
 					2. Share: <a target="_blank" href="https://www.facebook.com/daeplatform/posts/1835697250073321">www.facebook.com/daeplatform/posts/1835697250073321<br />
 					3. Following Our Twitter: <a target="_blank" href="https://twitter.com/daeplatformnet">@daeplatformnet<br />
 					4. Retweet: <a target="_blank" href="https://twitter.com/daeplatformnet/status/1013760876371853312"><br />
 					Reward: 20 DTHR</p>
-          <p><b>Telegram Campaign</b></p>
+					<p><b>Telegram Campaign</b></p>
 					<p>1. Join Our Telegram Channel: <a target="_blank" href="https://t.me/daeplatform">t.me/daeplatform</a><br />
 					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup>t.me/DaePlatformGroup</a><br />
 					Reward: 10 DTHR</p>
-          <p><b>BitcoinTalk Campaign</b></p>
+					<p><b>BitcoinTalk Campaign</b></p>
 					<p>1. Create a thread about Daethereum (DTHR) in your language.<br />
 					Reward: 100 DTHR<br />
-          Note<br/>
-          1. Newbie are not counted.<br />
-          2. The first thread of each language is accepted.</p>
-          <p><b>Blogger Campaign</b></p>
+					Note<br/>
+					1. Newbie are not counted.<br />
+					2. The first thread of each language is accepted.</p>
+					<p><b>Blogger Campaign</b></p>
 					<p>1. Create a post about Daethereum (DTHR) on your blog.<br />
 					Reward: 20 DTHR</p>
-          <p><b>YouTube Campaign</b></p>
+					<p><b>YouTube Campaign</b></p>
 					<p>1. Create a video about Daethereum (DTHR).<br />
 					3. Upload your video to YouTube.<br />
 					Reward: 500 DTHR</p>
-          <p><b>Refer Bounty & Airdrop, and get 10% from which they claim.</b></p>
-				</div>
-			</section>
-
-		<!-- Form -->
-			<section id="Roadmap" class="main style2">
-				<div class="container">
-					<center>
-					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBnayKL1NLmJrvWHYpKk0KV7jaKVr9C-Vv8bqyFKo80fa4yw/viewform?embedded=true" name="Form" scrolling="no" allowTransparency="true" frameborder="0" width="1000" height="1000">Loading. . . . .</iframe>
-					</center>
+					<p><b>Refer Bounty & Airdrop, and get 10% from which they claim.</b></p>
+					<ul class="actions">
+						<center>
+						<li><a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1" class="button scrolly">Filling In Form</a></li>
+						</center>
+					</ul>
 				</div>
 			</section>
 
