--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -41,9 +41,9 @@
 					Reward: 10 DTHR</p>
 					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
-					2. Share: <a target="_blank" href="https://www.facebook.com/daeplatform/posts/1835697250073321">www.facebook.com/daeplatform/posts/1835697250073321<br />
-					3. Following Our Twitter: <a target="_blank" href="https://twitter.com/daeplatformnet">@daeplatformnet<br />
-					4. Retweet: <a target="_blank" href="https://twitter.com/daeplatformnet/status/1013760876371853312"><br />
+					2. Share: <a target="_blank" href="https://www.facebook.com/daeplatform/posts/1835697250073321">www.facebook.com/daeplatform/posts/1835697250073321</a><br />
+					3. Following Our Twitter: <a target="_blank" href="https://twitter.com/daeplatformnet">@daeplatformnet</a><br />
+					4. Retweet: <a target="_blank" href="https://twitter.com/daeplatformnet/status/1013760876371853312">twitter.com/daeplatformnet/status/1013760876371853312</a><br />
 					Reward: 20 DTHR</p>
 					<p><b>BitcoinTalk Campaign</b></p>
 					<p>1. Create a thread about Daethereum (DTHR) in your language.<br />
