--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
 								<h2>Dae Platform Projects</h2>
 							</header>
 							<p><b>Our Crypto</a></b></p>
-							<p><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum (DAER)</a></b></p> is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
-							<p><a target="_blank" href="#">Daethereum (DTHR)</a> is digital asset designed without relying on a central server.</p>
+							<p><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum (DAER)</a></b> is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
+							<p><a target="_blank" href="https://etherscan.io/token/0xa5a45fe0c17d1f562c06cbeaab28bd5c1e025fe9">Daethereum (DTHR)</a> is digital asset designed without relying on a central server.</p>
 							<p><b>Tokenization</b></p>
 							<p>We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.</p>
+							<p><b>Travel Comparison Ticket Price</b> is a ticket price comparison site of various travel sites.</p>
+							<p></b>Media Information</b> is an online information medium of many famous references.</p>
 							<p><b>Dae Platform Markets</b> is a currency markets for trading and/or exhchange.</p>
-							<p><b>Ticket Price Comparison</b></p>
-							<p>Is a travel platform.</p>
+							<p><b>Development Plans</b></p>
 						</div>
 					</div>
 				</div>
@@ -66,11 +67,18 @@
 
 		<!-- Page -->
 		<section id="one" class="main style1">
+			<header class="major">
+				<center><h2><a target="_blank" href="#">Our Teams</a></h2></center>
+			</header>
+			<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
 			<div class="container">
-				<header class="major">
-					<center><h2><a target="_blank" href="#">Development Plans</a></h2></center>
-				</header>
-				<center>A plan for development that is discussed with the community.</center>
+				<div class="row 150%">
+					<div class="6u 12u$(medium)">
+						<ul class="major-icons">
+							<li><span class="icon style6 major fa-calendar"></span></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</section>
 
