--- a/teams2.html
+++ b/teams2.html
@@ -42,9 +42,9 @@ button:hover, a:hover {
   <h1>Farhan</h1>
   <p class="title">Co-Founder & Internet Marketing</p>
   <div style="margin: 24px 0;">
-    <a target="_blank" href="//aanwhs.blogspot.com"><i class="fa fa-dribbble"></i></a> 
-    <a target="_blank" href="//twitter.com/aanwhs"><i class="fa fa-twitter"></i></a>  
-    <a target="_blank" href="https://www.linkedin.com/in/kang-aan-wasi-466983113"><i class="fa fa-linkedin"></i></a>  
+    <a target="_blank" href="//flighthotelcheap.com"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
  </div>
  <p><button>Contact</button></p>
@@ -54,7 +54,7 @@ button:hover, a:hover {
   <h1>Hardiana</h1>
   <p class="title">Graphic Design & Internet Marketing</p>
   <div style="margin: 24px 0;">
-    <a target="_blank" href="#"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="//www.advfuns.com"><i class="fa fa-dribbble"></i></a> 
     <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
