--- a/teams.html
+++ b/teams.html
@@ -74,5 +74,41 @@ button:hover, a:hover {
  <p><button>Contact</button></p>
 </div>
 
+<div class="card">
+  <h1>Farhan</h1>
+  <p class="title">Co-Founder & Internet Marketing</p>
+  <div style="margin: 24px 0;">
+    <a target="_blank" href="//flighthotelcheap.com"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
+ </div>
+ <p><button>Contact</button></p>
+</div>
+
+<div class="card">
+  <h1>Hardiana</h1>
+  <p class="title">Graphic Design & Internet Marketing</p>
+  <div style="margin: 24px 0;">
+    <a target="_blank" href="//www.advfuns.com"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
+ </div>
+ <p><button>Contact</button></p>
+</div>
+
+<div class="card">
+  <h1>Fauji</h1>
+  <p class="title">Social Media Marketing</p>
+  <div style="margin: 24px 0;">
+    <a target="_blank" href="#"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
+    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
+ </div>
+ <p><button>Contact</button></p>
+</div>
+
 </body>
 </html>
