--- a/teams.html
+++ b/teams.html
@@ -42,7 +42,7 @@ button:hover, a:hover {
   <h1>Aan Wasi</h1>
   <p class="title">Founder & Developer</p>
   <div style="margin: 24px 0;">
-    <a target="_blank" href="//aanwhs.blogspot.com"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="//wasitravel.com"><i class="fa fa-dribbble"></i></a> 
     <a target="_blank" href="//twitter.com/aanwhs"><i class="fa fa-twitter"></i></a>  
     <a target="_blank" href="https://www.linkedin.com/in/kang-aan-wasi-466983113"><i class="fa fa-linkedin"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
@@ -78,7 +78,7 @@ button:hover, a:hover {
   <h1>Farhan</h1>
   <p class="title">Co-Founder & Internet Marketing</p>
   <div style="margin: 24px 0;">
-    <a target="_blank" href="//flighthotelcheap.com"><i class="fa fa-dribbble"></i></a> 
+    <a target="_blank" href="//triafa.com"><i class="fa fa-dribbble"></i></a> 
     <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>  
     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a> 
