--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p><b>Tokenization</b></p>
 							<p>We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.</p>
 							<p><b>Travel Comparison Ticket Price</b> is a ticket price comparison site of various travel sites.</p>
-							<p></b>Media Information</b> is an online information medium of many famous references.</p>
+							<p><b>Media Information</b> is an online information medium of many famous references.</p>
 							<p><b>Dae Platform Markets</b> is a currency markets for trading and/or exhchange.</p>
 							<p><b>Development Plans</b></p>
 						</div>
@@ -70,7 +70,7 @@
 			<header class="major">
 				<center><h2><a target="_blank" href="#">Our Teams</a></h2></center>
 			</header>
-			<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
+			<center><iframe src="https://daeplatform.net/teams.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="1000"></iframe></center>
 			<div class="container">
 				<div class="row 150%">
 					<div class="6u 12u$(medium)">
