--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<header class="major">
 				<center><h2><a target="_blank" href="#">Our Teams</a></h2></center>
 			</header>
-			<center><iframe src="https://daeplatform.net/teams.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="1250"></iframe></center>
+			<center><iframe src="https://daeplatform.net/teams.html" name="Teams" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="1330"></iframe></center>
 		</section>
 
 		<!-- Five -->
